tests/paczka2/big_fuzzy/93101605.err
Error in line 10: S496 S587 44,69
Error in line 4: QEhIsNJJ S676 65,1
Error in line 19: t5XH A672 75,3
Error in line 11: S496 S587 124,8
Error in line 15: QEhIsNJJ S587 65,7
Error in line 32: OzwYlnIiJ S587 2,8
Error in line 24: S496 S676 34,6
Error in line 40: QEhIsNJJ S587 58,2
Error in line 41: QEhIsNJJ S496 61,5
Error in line 39: K5LR S676 2,0
Error in line 56: QEhIsNJJ A672 25,9
Error in line 72: K5LR S587 98,7
Error in line 62: sMrmH S587 209,5
Error in line 76: sMrmH S676 27,8
Error in line 79: sMrmH S587 45,9
Error in line 81: sMrmH S496 10,2
Error in line 94: sMrmH S496 56,1
Error in line 104: K5LR A672 23,12
Error in line 105: sMrmH A672 237,67
Error in line 95: OzwYlnIiJ S496 74,2
Error in line 106: OzwYlnIiJ S587 73,9
Error in line 98: K5LR A672 38,0
Error in line 103: yPnI7JHw6 S676 99,0
Error in line 96: sMrmH A672 94,7
Error in line 111: yPnI7JHw6 A672 18,6
Error in line 117: QEhIsNJJ S587 21,8
Error in line 120: S496 S676 68,1
Error in line 123: S496 S496 44,8
Error in line 128: S496 S676 -1,9
Error in line 122: QEhIsNJJ S676 10,1
Error in line 125: S496 S676 2,2
Error in line 130: QEhIsNJJ A672 3,6
Error in line 140: sMrmH S587 20,27
Error in line 146: sMrmH S587 78,7
Error in line 147: OzwYlnIiJ S496 25,3
Error in line 158: S496 S496 29,30
Error in line 157: S496 S587 25,4
Error in line 162: yPnI7JHw6 S496 1,7
Error in line 149: sMrmH S676 84,1
Error in line 160: S496 S496 67,9
Error in line 166: S496 S587 82,5
Error in line 165: sMrmH A672 14,0
Error in line 170: OzwYlnIiJ S587 39,0
Error in line 175: yPnI7JHw6 A672 62,9
Error in line 173: OzwYlnIiJ S676 0,2
Error in line 180: K5LR A672 45,7
Error in line 184: t5XH S587 37,4
Error in line 194: t5XH S587 70,7
Error in line 195: t5XH S496 80,0
Error in line 197: t5XH S676 64,7
Error in line 190: K5LR S676 35,2
Error in line 201: K5LR S587 33,1
Error in line 204: K5LR S496 12,6
Error in line 240: yPnI7JHw6 S587 81,8
